# stencil

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: common.hpp  image.hpp
src/: image.cpp  stencil.cpp
